[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.1.3"
openai = "^0.27.4"
python-dotenv = "^1.0.0"
google-api-python-client = "^2.84.0"
bs4 = "^0.0.1"
Flask-SocketIO = "^5.3.3"
eventlet = "^0.33.3"
PyPDF2 = "^3.0.1"
clerk = "^0.1.0"
Flask-Dance = "^6.2.0"
oauth2client = "^4.1.3"
fake-useragent = "^1.1.3"
Flask-Mail = "^0.9.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"